# clafer

./: .ghci  .gitattributes  .gitignore  .travis.yml  CHANGES  CHANGES.md  LICENSE  Makefile  PowerWindow.cfr  README  README.md  arithmetic.cfr  cabal.project  clafer-mode.el  clafer.cabal  clafer.prof  commit.sh  deploy.sh  model.als  model.alsltl  model.cfr  model.des.cfr  model.html  model.xml  run_clafer_moo_demo.sh  stack.yaml  tags  test.result
IDEs/: README.md  clafer-README.md
doc/: CheatSheet.md  DocClafer.txt  Docclafer.txt  metamodel-core.cfr  metamodel.cfr
doc/tutorial/: Makefile  doc.bib  doc.tex
git_hooks/: README  pre-applypatch
pres/20110719-clafer-kbak/: Makefile  beamerthemeSleek.sty  doc.tex
pres/20110721-clafer-kbak/: doc.tex
pres/20120207-types-jliang_kbak/: Makefile  doc.tex
spl_configurator/: clafer_moo.sh  generate_clafer_models_from_sqplconqueror.sh  run_clafer_moo_demo.sh  run_clafer_moo_demo_apache.sh  run_clafer_moo_demo_sqlite.sh
spl_configurator/dataset/: apache.cfr  apache_unscaled.cfr  berkeleydb.cfr  linkedlist.cfr  linkedlist.des.cfr  linkedlist_print_measurement.cfr  pkjab.cfr  prevayler.cfr  simple_isolate_partial_instances_error.cfr  simple_multiple_answers.cfr  solved_apache.txt  solved_sqlite.txt  sovled_linkedlist.txt  sovled_linkedlist_print_measurement.txt  sqlite.cfr  sqlite_scaled.cfr  sqlite_scaled_16000.cfr  sqlite_scaled_256000.cfr  sqlite_scaled_64000.cfr  sqlite_scaled_tiny.cfr  telematics_multi_objective_optimization.cfr  telematics_multi_objective_optimization_multiple_answers.cfr  violet.cfr  zipme.cfr
spl_configurator/py_other/: SPL_Conqueror_XML_To_Clafer_Translator.py  test_multi_objective_optimization.py
spl_configurator/py_src/: SPL_Configurator_clafer_generator.py  SPL_Conqueror_XML_Parser_Helper.py  SPL_Conqueror_XML_To_Clafer_Translator.py  TransformResults_ToQualityProperties.py  spl_claferanalyzer.py  splconqueror_analyzer.py  test_multi_objective_optimization.py  xml_parser_helper.py
spl_configurator/tests/: inheritance_bug_partial_instances.als  linkedlist_sum.cfr  negative_number_translator.cfr  simple_goal.cfr  simple_multi_goals.cfr  simple_no_goals.cfr  simplified_linkedlist.cfr  sqlite_simplified.cfr  sqlite_simplified_isolate_partial_instances_error.cfr  test_nullpointer.cfr  test_xor_linkedlist.cfr
spl_configurator/unit_test_data/: telematics_multi_objective_optimization.xml
src/: ClaferArgs.hs  ClaferIR.xsd  Common.hs  GetURL.hs  Makefile  README  SplitJoin.hs  Version.hs  clafer-mode.el  clafer.cf  clafer.hi  clafer.hs  clafer2alloy.hs  dateVer.hs
src-cmd/: clafer.hs
src/Front/: Absclafer.diff  Absclafer.hs  ErrM.hs  LayoutResolver.hs  Lexclafer.hs  Mapper.hs  Parclafer.hs  Parclafer.patch  Parclafer.y.diff  Printclafer.hs  Printclafer.patch  clafer.cf
src/Generator/: Alloy.hs  ClaferIR.xsd  Schema.hs  Stats.hs  Xml.hs  XmlHeader.hs  XmlHelp.hs  quote.sh
src/Language/: Clafer.hi  Clafer.hs  ClaferT(Map).hs  ClaferT.hi  ClaferT.hs  SnapShots.hs
src/Optimizer/: Optimizer.hs
src/Test/: Functions.hs  telematics.cfr
src/front/: Absclafer.hs  Absclafer2alloy.hs  Lexclafer.hs  Parclafer.hs  Parclafer2alloy.hs  Printclafer.hs  Printclafer2alloy.hs  clafer.cf
test/: ClaferIR.xsd  Functions.hs  Makefile  doctests.hs  positive-0.3.2-vs-0.3.3.diff  test-suite.hs
test/Suite/: Example.hs  Negative.hs  Positive.hs  Redefinition.hs  SimpleScopeAnalyser.hs  TypeSystem.hs
test/experimental/: SQLite.cfr  SQLite.v  envrioment.cfr  i60_TimeLevel.cfr  i60_TimeUnit2.cfr  issue_abstract_clafer_translation.cfr  issue_belongs_to.cfr  issue_name_resolution_clafer_translator.cfr  lambda_feedback_control.cfr  ta-assignments_sample_alloy  tmp_PowerWindowDesignModel.cfr  tmp_PowerWindowSys.cfr  tmp_history01.cfr
test/failing/: gi86-clafer-cannot-extend-itself.cfr  gi89-ref-to-constant.cfr  gi89-ref-to-constant.js  redefinition.cfr  root.cfr
test/negative/: Inheritance-among-concrete-clafers-Year-Neg.cfr  checkDuplicates.cfr  gi77-selfInheritance.cfr  i125-token.cfr  i127-loop.cfr  i132-syntax-error.cfr  i199-afm-check.cfr  i216-2-inheritance-among-concrete.cfr  i216-inheritance-among-concrete.cfr  i30-cannot-disambiguate.cfr  i79_disallow-assignment-to-nonattributes-references.cfr  nav.cfr  quantifierAndDefaultSome.cfr
test/positive/: ACCDemo_attributedFeatureModels.cfr  ACCDemo_featureModels.cfr  ACCDemo_fullClafer.cfr  BMM_model.cfr  ClaferToolsDemo_Adding_Quality.cfr  ClaferToolsDemo_Existing_Android_Phones.cfr  ClaferToolsDemo_Variant_Derivation.cfr  ClaferTools_CommandLineArguments.cfr  ClaferTools_ToolingArchitecture.cfr  ClaferWiki-Specific_Help.cfr  EAST-ADL-PowerWindow.cfr  EAST-ADL-connector.cfr  EAST-ADL-device.cfr  EAST-ADL-funcdevice.cfr  EAST_ADL_PowerWindow.cfr  EAST_ADL_connector.cfr  EAST_ADL_device.cfr  EAST_ADL_funcdevice.cfr  EAST_ADL_function.cfr  EDMPoster_Intro.cfr  EDM_Intro.cfr  ESC_FMCSA571.126-model.cfr  Inheritance-among-concrete-clafers-Person.cfr  Inheritance-among-concrete-clafers-Year.cfr  Linux_model.cfr  Linux_model.html  Linux_model.js  Linux_model.py  Makefile  NECSIS-Workshop_Modeling_Quality_4.cfr  NECSIS-Workshop_Modeling_Variability_7.cfr  NECSIS-Workshop_Modeling_Variability_7.js  NECSIS-Workshop_Modeling_Variability_7.py  NestedInheritanceAndReference2.cfr  Scotiabank_Mortgages.cfr  Scotiabank_Mortgages.js  Telematics_PLA.als  Telematics_PLA.cfr  Telematics_PLA.dot  Telematics_PLA.js  (+350 more)
test/regression-0.3.2/: books_tutorial.als.reg  constraints.als.reg  enforcingInverseReferences.als.reg  i131-incorrect-scope.als.reg  i150-or-groups.als.reg  i18.als.reg  i188-sum-quantifier.als.reg  i188-sum-quantifier2.als.reg  i19.als.reg  i199-afm-check.als.reg  i226-unary-minus.als.reg  i227-implicit-this-in-IR.als.reg  i235.als.reg  i40-text-equality.als.reg  i40_integers_strings_assignment.als.reg  i50.als.reg  i50_stop_following_references.als.reg  i55.als.reg  i61-cardinalities.als.reg  i74.als.reg  i84-references-pointing-to-the-same-object.als.reg  i98_top-level-references.als.reg  (+9 more)
tools/: .gitignore  Makefile  XsdCheck.java  simp.als  simp.cfr  simp.cfr~
(+1116 files in other folders)
