cabal-version:          3.8
name:                   clafer
version:                0.5.1
synopsis:               Compiles Clafer models to other formats: Alloy, JavaScript, JSON, HTML, Dot.
description:            Clafer is a general purpose, lightweight, structural modeling language developed at GSD Lab, University of Waterloo, and MODELS group at IT University of Copenhagen. Lightweight modeling aims at improving the understanding of the problem domain in the early stages of software development and determining the requirements with fewer defects. Clafer's goal is to make modeling more accessible to a wider range of users and domains. The tool provides a reference language implementation. It translates models to other formats (e.g. Alloy, JavaScript, JSON) to allow for reasoning with existing tools.
homepage:               http://clafer.org
license:                MIT
license-file:           LICENSE
author:                 Kacper Bak, Jimmy Liang, Michał Antkiewicz, Ed Zulkoski, Luke Michael Brown, Paulius Juodisius, Rafael Olaechea
maintainer:             Michał Antkiewicz <michal.antkiewicz@uwaterloo.ca>
stability:              Experimental
category:               Model
build-type:             Simple
tested-with:            GHC == 9.2.8
                      , GHC == 9.4.6
data-files:             README.md
                      , CHANGES.md
                      , logo.pdf
                      , Makefile
                      , ecore2clafer.jar
                      , stack.yaml
                      , src/Language/Clafer/Generator/stateTrace.als
extra-source-files:     src/Language/Clafer/clafer.css
source-repository head
    type:               git
    location:           git://github.com/gsdlab/clafer.git

common shared-deps
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:      base >= 4.16 && < 5
                      , containers >= 0.5.7.1
                      , filepath >= 1.4.1.1
                      , mtl >= 2.2.1
                      , split >= 0.2.3.2

executable clafer
    import:             shared-deps
    main-is:            clafer.hs
    hs-source-dirs:     src-cmd

    -- -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
    build-depends:      process >= 1.6.3.0
                      , cmdargs >= 0.10.20
                      , clafer
    other-modules:      Paths_clafer

library
    import:             shared-deps
    build-tool-depends: happy:happy >= 1.19.5
                      , alex:alex >= 3.1.7
    build-depends:      array >= 0.5.0.0
                      , bytestring >= 0.10.8.1
                      , cond >= 0.4
                      , directory >= 1.3.0.0
                      , process >= 1.4.3.0
                      , transformers >= 0.5.2.0

                      , HTTP >= 4000.3.9
                      , network >= 2.6.3.2
                      , parsec >= 3.1.11
                      , text >= 2.0

                      , aeson >= 1.1.2.0
                      , cmdargs >= 0.10.20
                      , data-stringmap >= 1.0.1.1
                      , executable-path >= 0.0.3.1
                      , file-embed >= 0.0.10
                      , json-builder >= 0.3
                      , lens >= 4.15.4
                      , lens-aeson >= 1.0.2
                      , network-uri >= 2.6.1.0
                      , string-conversions >= 0.4.0.1
                      , transformers-compat >= 0.5.1.4
                      , mtl-compat >= 0.2.1.3

    hs-source-dirs:     src
    ghc-options:        -fno-warn-orphans
    exposed-modules:    Language.Clafer
                      , Language.ClaferT
                      , Language.Clafer.ClaferArgs
                      , Language.Clafer.Comments
                      , Language.Clafer.Common
                      , Language.Clafer.Css
                      , Language.Clafer.JSONMetaData
                      , Language.Clafer.QNameUID
                      , Language.Clafer.Front.AbsClafer
                      , Language.Clafer.Front.ErrM
                      , Language.Clafer.Front.LayoutResolver
                      , Language.Clafer.Front.LexClafer
                      , Language.Clafer.Front.ParClafer
                      , Language.Clafer.Front.PrintClafer
                      , Language.Clafer.Generator.Alloy
                      , Language.Clafer.Generator.AlloyLtl
                      , Language.Clafer.Generator.Choco
                      , Language.Clafer.Generator.Concat
                      , Language.Clafer.Generator.Graph
                      , Language.Clafer.Generator.Html
                      , Language.Clafer.Generator.Stats
                      , Language.Clafer.Intermediate.Desugarer
                      , Language.Clafer.Intermediate.Intclafer
                      , Language.Clafer.Intermediate.Resolver
                      , Language.Clafer.Intermediate.ResolverInheritance
                      , Language.Clafer.Intermediate.ResolverName
                      , Language.Clafer.Intermediate.ResolverType
                      , Language.Clafer.Intermediate.ScopeAnalysis
                      , Language.Clafer.Intermediate.SimpleScopeAnalyzer
                      , Language.Clafer.Intermediate.StringAnalyzer
                      , Language.Clafer.Intermediate.Tracing
                      , Language.Clafer.Intermediate.Transformer
                      , Language.Clafer.Intermediate.TypeSystem
                      , Language.Clafer.Optimizer.Optimizer
                      , Language.Clafer.SplitJoin
                      , Paths_clafer
    other-modules:      GetURL

Test-Suite test-suite
    import:             shared-deps
    type:               exitcode-stdio-1.0
    main-is:            test-suite.hs
    hs-source-dirs:     test
    build-depends:      directory >= 1.3.0.0

                      , HUnit >= 1.5.0.0
                      , QuickCheck >= 2.9.2

                      , data-stringmap >= 1.0.1.1
                      , lens >= 4.6.0.1
                      , lens-aeson >= 1.0.2
                      , tasty >= 0.11.3
                      , tasty-hunit >= 0.9.2
                      , tasty-th >= 0.1.7
                      , transformers-compat >= 0.5.1.4
                      , mtl-compat >= 0.2.1.3
                      , clafer

    other-modules:      Functions
                      , Suite.Positive
                      , Suite.Negative
                      , Suite.SimpleScopeAnalyser
                      , Suite.Redefinition
                      , Suite.TypeSystem

Test-suite doctests
    import:             shared-deps
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    main-is:            doctests.hs
    hs-source-dirs:     test
    build-depends:      doctest >= 0.11.4
